@@ -2,7 +2,7 @@
 #define	MISC_H
 
 /*
- *  Copyright (C) 2003-2012  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2003-2013  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -44,7 +44,7 @@
 #include "../../config.h"
 
 
-#define	COPYRIGHT_MSG	"Copyright (C) 2003-2012  Anders Gavare"
+#define	COPYRIGHT_MSG	"Copyright (C) 2003-2013  Anders Gavare"
 
 // The recommended way to add a specific message to the startup banner or
 // about box is to use the SECONDARY_MSG. This should end with a newline
