@@ -4608,4 +4608,5 @@ Changelog for GXemul:
 		instruction. This was triggered when running int64_t modulo.
 20130907	Updating NetBSD/dreamcast test instructions: 5.1 -> 6.1.1.
 		Updating NetBSD/pmax install instructions: 5.1.1 -> 6.1.1.
+20131006	Adding a dummy Raspberry Pi machine mode.
 
